log
Tue 09 May 2023 11:02:15 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
97fbe4a
